--- a/web/styles/Home.module.css
+++ b/web/styles/Home.module.css
@@ -1,116 +1,85 @@
-.container {
-  padding: 0 2rem;
-}
-
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  width: 98.5vw;
+  overflow: hidden;
+  margin-top: 5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  row-gap: 2rem;
+  position: relative;
 }
 
-.footer {
+/* stacked cards */
+.cards_container {
   display: flex;
+  width: 100%;
+}
+.card_list {
+  display: flex;
+  padding: 3rem;
+  overflow-x: scroll;
   flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+  padding-right: 20px;
 }
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.card_list::-webkit-scrollbar {
+  display: none;
 }
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  height: clamp(250px, 20rem, 500px);
+  min-width: 20rem;
+  border-radius: 16px;
+  background: var(--background);
+  box-shadow: -1rem 0.5rem 3rem -1.5rem black;
+  transition: 0.2s;
+  overflow: hidden;
+  z-index: 3;
+}
+.card:hover {
+  transform: translateY(-1rem) rotateZ(-2deg);
+}
+.card:hover ~ .card {
+  transform: translateX(130px);
+}
+.card:not(:first-child) {
+  margin-left: -13%;
+}
+.card_logo {
+  height: 80%;
+  width: 100%;
+  object-fit: cover;
+}
+.card_header {
+  flex: 1;
+  padding: 5%;
+  margin-left: 20px;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.card:hover h1 {
+  background: linear-gradient(90deg, #ff8a00, #e52e71);
+  text-shadow: none;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: 'Anton', 'Courier New', Courier, monospace;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+/* Carousel styles */
+.carousel_container {
+  width: 100%;
+  min-height: calc(var(--container-height) + 5rem);
+  position: relative;
+  overflow: hidden;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.card_img {
+  height: calc(var(--card-height) - 90px);
+  width: 100%;
+  border-radius: 2% 2% 0 0;
 }
 
 @media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
 }
