--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,15 +1,19 @@
 :root {
-  /* Your default theme */
+  --background: white;
+  --foreground: black;
   background: white;
   color: black;
+  --card-height: 350px;
+  --card-width: 400px;
+  --container-height: 60vh;
 }
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Chillax', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -24,4 +28,11 @@ a {
 [data-theme='dark'] {
   background: black;
   color: white;
+  --background: rgb(36, 36, 36);
+  --foreground: white;
+}
+
+h1 {
+  font-family: 'Anton', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
