--- a/web/styles/carousel.module.css
+++ b/web/styles/carousel.module.css
@@ -18,13 +18,20 @@
   align-items: center;
 }
 
-.slider > .card {
+.card {
   height: var(--card-height);
   min-width: var(--card-width);
   width: var(--card-width);
   border-radius: 2%;
-  box-shadow: -0.3rem 0.3rem 1rem 0.2rem rgba(152, 143, 143, 0.2),
-    0.3rem -0.3rem 1rem 0.2rem rgba(152, 143, 143, 0.2);
+  background-color: var(--background);
+  box-shadow: -0.3rem 0.3rem 1rem 0.2rem rgba(48, 48, 48, 0.2),
+    0.3rem -0.3rem 1rem 0.2rem rgba(2, 2, 2, 0.2);
+  transition: all 0.2s ease-out;
+}
+
+.card:hover {
+  transform: scale(1.02);
+  cursor: pointer;
 }
 
 .container > .controls {
@@ -43,6 +50,11 @@
 
 .card_active {
   min-height: calc(var(--card-height) + 50px);
+  z-index: 3;
+}
+
+.card_active:hover {
+  transform: scale(1.1);
 }
 
 .card_active img {
@@ -53,4 +65,12 @@
   height: calc(var(--card-height) - 90px);
   width: 100%;
   border-radius: 2% 2% 0 0;
+}
+
+.btn {
+  border-radius: 50%;
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  /* transform: translateY(-50%); */
 }
